export pool Wait
improve conf、time and test
improve the log
optimize redis and log use
add reflect.Set();remove bmap to use tmap
update readme