@@ -1,8 +1,6 @@
 package ghttp
 
 import (
-	"bytes"
-	"encoding/json"
 	"testing"
 )
 
@@ -26,8 +24,17 @@ func TestPostJSON(t *testing.T) {
 	type Search struct {
 		Q string `json:"q"`
 	}
-	b, _ := json.Marshal(Search{Q: "gt"})
-	r.SetBody(bytes.NewReader(b))
+	r.SetJsonBody(Search{Q: "gt"})
+	res := r.Exec()
+	t.Log(res.String())
+}
+
+func TestPostForm(t *testing.T) {
+	r := NewRequest(POST, "https://www.beqege.cc/search.php?keyword=t")
+	r.SetContentType(ContentTypeFormUrl)
+	r.SetHeader("user-agent", "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36")
+	r.SetForm("keyword", "圣墟")
+	r.SetHeader("cookie", "cf_clearance=8f7e8826a9fca60e000b254aa1c62eb66ea95e0d-1667200369-0-150; __cf_bm=5Cm7Fkpqq9.1MnLU2BazDmowXaqnhikXmo01Sdt3zvM-1667205564-0-AdSmEFZDmispSpenxu3ozQhp2WaM7fT6qNTGeiPR4/R/h14+fc/6d0sHdrnuedOcTs5ADq8P3vlOefRTbw6Nq2WyCsamhMZr0qaWIzObr0ieRp1qc1V0yFA03zvwfBb9aQ==")
 	res := r.Exec()
 	t.Log(res.String())
 }
@@ -35,7 +42,7 @@ func TestPostJSON(t *testing.T) {
 func TestUpload(t *testing.T) {
 	r := NewRequest(POST, "http://192.168.10.11/upload")
 	//r.SetContentType(ContentTypeForm)
-	_ = r.AddFile("file", "test.txt", "test1.txt")
+	_ = r.SetFile("file", "test.txt", "test1.txt")
 	res := r.Exec()
 	t.Log(res.String())
 }
