@@ -1,7 +1,6 @@
 package reflect
 
 import (
-	"errors"
 	"reflect"
 )
 
@@ -12,20 +11,14 @@ func Set(data any, field string, value any) {
 }
 
 // Field reflect value via field name
-func Field(data any, field string) (any, error) {
-	typ := TrueValueOf(data)
+// field must exist
+func Field(data any, field string) any {
+	return TrueValueOf(data).FieldByName(field).Interface()
+}
 
-	switch typ.Kind() {
-	case reflect.Ptr, reflect.Chan, reflect.Map, reflect.Array, reflect.Slice:
-		v := reflect.ValueOf(data).Elem()
-		f := v.FieldByName(field)
-		return f.Interface(), nil
-	case reflect.Struct:
-		v := reflect.ValueOf(data)
-		f := v.FieldByName(field)
-		return f.Interface(), nil
-	}
-	return nil, errors.New(field + "not exit")
+// TrueField return Field true value, eg: Ptr value
+func TrueField(data any, field string) any {
+	return TrueValueOf(Field(data, field)).Interface()
 }
 
 // ToSlice arr must array data
